# origin

./: .editorconfig  .gitignore  .gitlab-ci.yml  .impeccable.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Gaps.md  NOTICE  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/origin-alloc/: Cargo.toml
crates/origin-alloc/src/: arena_id.rs  jemalloc_backend.rs  lib.rs  noop_backend.rs  scope.rs
crates/origin-alloc/tests/: arena_routing.rs  reset_destroy.rs
crates/origin-ambient/: Cargo.toml
crates/origin-ambient/src/: lib.rs
crates/origin-bench/: Cargo.toml
crates/origin-bench/src/: leaderboard.rs  lib.rs  main.rs  metrics.rs  reliability.rs  report.rs  runner_origin.rs  runner_subprocess.rs  task_set.rs
crates/origin-bench/tests/: polyglot_corpus.rs  report_render.rs  smoke.rs  task_set_shape.rs
crates/origin-browser/: Cargo.toml
crates/origin-browser/src/: agent_browser.rs  cloak.rs  detectors.rs  lib.rs  protocol.rs  router.rs  visual.rs  web_fetch.rs  web_search.rs
crates/origin-browser/tests/: agent_browser_client.rs  cloak_client.rs  detectors_table.rs  router_fallback.rs  web_fetch_basic.rs  web_search_basic.rs
crates/origin-cas/: Cargo.toml
crates/origin-cas/benches/: uring_throughput.rs
crates/origin-cas/src/: chunker.rs  dict.rs  hash.rs  lib.rs  packfile.rs  packfile_uring.rs  refs.rs  store.rs
crates/origin-cas/tests/: chunker.rs  dict.rs  finalize_durability.rs  gc.rs  hash.rs  packfile.rs  store.rs  uring_round_trip.rs
crates/origin-cli/: Cargo.toml
crates/origin-cli/benches/: keystroke_to_pixel.rs
crates/origin-cli/src/: admin.rs  admin_url.rs  ambient.rs  ansi.rs  autocomplete.rs  bench.rs  cli_def.rs  clipboard.rs  config.rs  daemon_launch.rs  display_hook.rs  doctor.rs  editor.rs  effort.rs  first_run_prompt.rs  gaps_cmds.rs  goal_render.rs  headless.rs  import.rs  init.rs  init_probe.rs  input.rs  insights.rs  keybindings.rs  keyring_login.rs  knowledge.rs  lib.rs  locale.rs  lsp.rs  main.rs  markdown_tasks.rs  memory_inbox.rs  mentions.rs  mermaid.rs  oidc.rs  plan_panel_wiring.rs  plugin.rs  providers.rs  recommend.rs  resume_foreign.rs  (+19 more)
crates/origin-cli/tests/: admin_cli.rs  admin_e2e.rs  app.rs  draw_smoke.rs  headless_stream.rs  import.rs  multi_instance.rs  pair_cli.rs  providers_merge.rs  run_help.rs  startup_stack.rs  status.rs  tutorial.rs
crates/origin-clipboard/: Cargo.toml
crates/origin-clipboard/src/: lib.rs
crates/origin-cmdparse/: Cargo.toml
crates/origin-cmdparse/src/: lib.rs
crates/origin-codegraph/: Cargo.toml
crates/origin-codegraph/benches/: community.rs  incremental.rs
crates/origin-codegraph/src/: ask.rs  chunker.rs  community.rs  extract.rs  git_hook.rs  index.rs  lang.rs  lib.rs  query.rs  rebuild.rs  record.rs  sidecar.rs
crates/origin-codegraph/tests/: ask.rs  chunker.rs  community.rs  extract.rs  index.rs  lang.rs  query.rs  rebuild.rs  sidecar.rs
crates/origin-conseca/: Cargo.toml
crates/origin-conseca/src/: lib.rs
crates/origin-core/: Cargo.toml
crates/origin-core/src/: ir.rs  lib.rs  types.rs
crates/origin-core/tests/: ir.rs  messages.rs  types.rs
crates/origin-cost/: Cargo.toml
crates/origin-cost/src/: lib.rs
crates/origin-cow/: Cargo.toml
crates/origin-cow/src/: hardlink_fallback.rs  lib.rs  reflink_linux.rs  reflink_macos.rs  reflink_windows.rs  strategy.rs
crates/origin-cow/tests/: isolation.rs  windows_reflink_trim_atomicity.rs  windows_refs_reflink.rs
crates/origin-daemon/: Cargo.toml
crates/origin-daemon/benches/: long_session.rs  phase2_ram_soak.rs
crates/origin-daemon/fuzz/: Cargo.toml
crates/origin-daemon/src/: agent.rs  ambient.rs  anthropic_verifier.rs  auth.rs  compactor.rs  config.rs  daemon_memory_handle.rs  default_workflow.rs  goal_checkpoint.rs  goal_clear_all.rs  goal_driver.rs  hooks_runtime.rs  ipc_prompter.rs  lib.rs  lsp_diagnostics.rs  main.rs  mem_garden.rs  memory_wiring.rs  overnight.rs  pairing.rs  plan_bus.rs  proposal_registry.rs  protocol.rs  provider_factory.rs  ra_impl.rs  routing.rs  runtime_launch.rs  scheduler.rs  selfdev.rs  session.rs  session_store.rs  shutdown.rs  skill_catalog.rs  stream_relay.rs  subagents_md.rs  subsystems.rs  supervisor.rs  swarm_worker.rs  teams.rs  tool_use_parser.rs  (+4 more)
crates/origin-daemon/tests/: account_switch.rs  active_skill_body_in_system_prompt.rs  admin_ipc.rs  anthropic_smoke.rs  bearer_ttl.rs  catalog_factory.rs  clear_skill_clears_active_goal.rs  compaction.rs  cross_provider_account.rs  goal_activates_with_inline_args.rs  goal_activation_checkpoint.rs  goal_budget_caps.rs  goal_checkpoint_persists.rs  goal_first_iter_cap_falls_through.rs  goal_inactive_event.rs  goal_interrupt_end_to_end.rs  goal_interrupt_terminal_checkpoint.rs  goal_iterates_on_in_progress.rs  goal_max_iter_caps.rs  goal_post_verifier_budget_exhausted.rs  goal_snapshot_preserves_last_tag.rs  goal_system_prompt_injection.rs  goal_user_interrupt_during_iteration.rs  goal_verifier_empty_reply.rs  goal_verifier_rejected_cap.rs  goal_verifier_rejection_resumes.rs  loop_e2e.rs  memoization_e2e.rs  memory_accept_registry.rs  memory_e2e.rs  memory_proposal_round_trip.rs  orphan_tool_use_delta.rs  pairing_e2e.rs  pairing_unit.rs  phase3_cache_warm_ratio.rs  plan_bus.rs  protocol_pair.rs  rate_limit_retry.rs  resume_session.rs  rewind_across_compaction.rs  (+21 more)
crates/origin-doctor/: Cargo.toml
crates/origin-editfmt/: Cargo.toml
crates/origin-export/: Cargo.toml
crates/origin-gmail/: Cargo.toml
crates/origin-goal/: Cargo.toml
crates/origin-hooks/: Cargo.toml
crates/origin-i18n/: Cargo.toml
crates/origin-ipc/: Cargo.toml
crates/origin-keyvault/: Cargo.toml
crates/origin-knowledge/: Cargo.toml
crates/origin-lsp-client/: Cargo.toml
crates/origin-lspfleet/: Cargo.toml
crates/origin-mcp/: Cargo.toml
crates/origin-mem/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: lint_secrets.rs  lint_spawn.rs  lint_spawn_allowlist.rs  main.rs  manpages.rs  release.rs
xtask/tests/: lint_secrets.rs  lint_spawn.rs
(+651 files in other folders)
