[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/origin-daemon/fuzz"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/wooainsley/origin"

[workspace.lints.rust]
unsafe_code = "forbid"  # overridden in cas/tui/ipc

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "warn"

[workspace.dependencies]
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
growable-bloom-filter = "2"

