[workspace]
resolver = "2"
members = ["crates/*", "xtask"]
exclude = ["crates/origin-daemon/fuzz"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/wooainsley/origin"

[workspace.lints.rust]
unsafe_code = "forbid"  # overridden in cas/tui/ipc

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "warn"

[workspace.dependencies]
# P10 carried these forward
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
growable-bloom-filter = "2"
# P11 additions
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "registry"] }
arrow = { version = "53", default-features = false, features = ["prettyprint"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
jsonschema = { version = "0.18", default-features = false }
prometheus = { version = "0.13", default-features = false }
opentelemetry = { version = "0.24", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.17", default-features = false, features = ["grpc-tonic"] }
hyper = { version = "1", default-features = false, features = ["server", "http1"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
caps = "0.5"
seccompiler = "0.4"
landlock = "0.4"
# P12 additions
tikv-jemallocator = { version = "0.6", default-features = false, features = ["background_threads"] }
tikv-jemalloc-ctl = { version = "0.6", default-features = false }
tokio-uring = "0.5"
nix = { version = "0.29", default-features = false, features = ["signal", "process"] }
