[workspace]
resolver = "2"
members = ["crates/*", "xtask"]
exclude = ["crates/origin-daemon/fuzz"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/Kantosaurus/origin"
homepage = "https://github.com/Kantosaurus/origin"

[workspace.lints.rust]
unsafe_code = "forbid"  # overridden in cas/tui/ipc

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "warn"

[workspace.dependencies]
# P10 carried these forward
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
growable-bloom-filter = "2"
# P11 additions
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "registry"] }
arrow = { version = "53", default-features = false, features = ["prettyprint"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
jsonschema = { version = "0.18", default-features = false }
prometheus = { version = "0.13", default-features = false }
opentelemetry = { version = "0.24", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.17", default-features = false, features = ["grpc-tonic"] }
hyper = { version = "1", default-features = false, features = ["server", "http1"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
caps = "0.5"
seccompiler = "0.4"
landlock = "0.4"
# P12 additions
tikv-jemallocator = { version = "0.6", default-features = false, features = ["background_threads"] }
tikv-jemalloc-ctl = { version = "0.6", default-features = false }
tokio-uring = "0.5"
nix = { version = "0.31", default-features = false, features = ["signal", "process"] }
# P13 QUIC + mutual-TLS remote IPC transport
quinn          = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls", "ring", "log"] }
rustls         = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen          = { version = "0.13", default-features = false, features = ["pem", "ring"] }
x509-parser    = "0.16"
sha2           = "0.10"
hex            = "0.4"
# P14 additions
tar          = "0.4"
zstd         = { version = "0.13", default-features = false }
globset      = "0.4"
walkdir      = "2"
rusqlite     = { version = "0.32", default-features = false, features = ["bundled"] }
clap_mangen  = "0.2"
# P15 — embedded skills + browser/web tools
include_dir  = "0.7"
# default features pull in reqwest 0.11 (native-tls -> openssl-sys), which breaks
# the musl/cross release build and contradicts our rustls-only TLS policy. We
# only use `readability::extractor::extract`, which needs no network feature.
readability  = { version = "0.3", default-features = false }
html2md      = "0.2"
# tool-suite-v2 additions
encoding_rs  = "0.8"
pdf-extract  = "0.7"
image        = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
similar      = "2"
proptest     = "1"

# Limit debuginfo to keep PDB under the Windows 4 GB limit (LNK1318).
# The origin-cli binary links the daemon, every provider, and every tool —
# full debuginfo blows the PDB past the linker's hard cap on Windows.
# line-tables-only keeps backtrace line numbers but drops type info.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
