[package]
name = "xtask"
version = "0.0.1"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen.workspace = true
origin-cli = { path = "../crates/origin-cli" }
anyhow = "1"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
regex = "1"
thiserror = "2"
proc-macro2 = "1"
quote = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
