[package]
name = "origin-alloc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Override workspace `unsafe_code = "forbid"` — jemalloc MALLCTL FFI is gated
# behind the `jemalloc` feature. Each unsafe block carries a SAFETY: comment.
# Cargo forbids combining `[lints] workspace = true` with per-section
# overrides, so we inline the workspace clippy lints here too.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "warn"

[features]
default = []
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl", "dep:tikv-jemalloc-sys", "dep:libc"]

[dependencies]
thiserror = "1"
tracing = { workspace = true }

tikv-jemallocator = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
tikv-jemalloc-sys = { version = "0.6", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
serial_test = "3"
