# SPDX-License-Identifier: Apache-2.0
[package]
name = "origin-ambient"
description = "Resource-aware always-on + overnight autonomous mode policy under an adaptive token budget"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
