[package]
name = "origin-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "origin_bench"
path = "src/lib.rs"

[[bin]]
name = "origin-bench"
path = "src/main.rs"

[dependencies]
origin-core    = { path = "../origin-core" }
origin-replay  = { path = "../origin-replay" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1"
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
