[package]
name = "origin-browser"
description = "Dual-backend browser router with one-shot WebFetch and Tavily WebSearch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { workspace = true }
readability = { workspace = true }
html2md = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
thiserror = "2"
regex = "1"
tracing = { workspace = true }
url = "2"
origin-keyvault = { path = "../origin-keyvault" }

[dev-dependencies]
tempfile = "3"
