[package]
name = "origin-cas"
description = "Content-addressed store with FastCDC chunking, mmap pack files, and three-tier storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# CAS uses mmap and atomic cursors in later P2 tasks; override the workspace
# `unsafe_code = "forbid"` here. Every unsafe block carries a `// SAFETY:` comment.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
undocumented_unsafe_blocks = "deny"

[dependencies]
blake3 = "1"
byteorder = "1"
fastcdc = "3"
lru = "0.16"
memmap2 = "0.9"
origin-replay = { path = "../origin-replay", optional = true }
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "2"
zstd = "0.13"

[dev-dependencies]
hex = "0.4"
proptest = { version = "=1.4.0", default-features = false, features = ["std"] }
tempfile = "3"

[features]
default = []
recorder = ["dep:origin-replay"]
uring = ["dep:tokio-uring", "dep:origin-runtime"]

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { workspace = true, optional = true }
# Used by the uring-write hop to attach a `TaskClass::Background` permit
# to the `spawn_blocking` that hosts `tokio_uring::start`.
origin-runtime = { path = "../origin-runtime", optional = true }

[[bench]]
name = "uring_throughput"
harness = false
required-features = ["uring"]
