[package]
name = "origin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "origin_cli"
path = "src/lib.rs"

[[bin]]
name = "origin"
path = "src/main.rs"

[dependencies]
origin-ipc = { path = "../origin-ipc" }
origin-daemon = { path = "../origin-daemon" }
origin-runtime = { path = "../origin-runtime" }
origin-tui = { path = "../origin-tui" }
origin-plan = { path = "../origin-plan" }
origin-trace = { path = "../origin-trace" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"
futures-util = "0.3"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
dirs = "5"
hostname = "0.4"
url = "2"

[dev-dependencies]
criterion = "0.5"
origin-stream = { path = "../origin-stream" }
tempfile = "3"
ulid = "1"

[[bench]]
name = "keystroke_to_pixel"
harness = false
