[package]
name = "origin-cli"
description = "Terminal UI and CLI for the origin agent runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "origin_cli"
path = "src/lib.rs"

[[bin]]
name = "origin"
path = "src/main.rs"

[dependencies]
origin-ipc = { path = "../origin-ipc" }
origin-daemon = { path = "../origin-daemon" }
origin-runtime = { path = "../origin-runtime" }
origin-tui = { path = "../origin-tui" }
origin-plan = { path = "../origin-plan" }
origin-trace = { path = "../origin-trace" }
origin-migrate = { path = "../origin-migrate" }
origin-store = { path = "../origin-store" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"
unicode-width = "0.2"
futures-util = "0.3"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
dirs = "5"
hostname = "0.4"
url = "2"
thiserror = "1"
origin-provider = { path = "../origin-provider" }
origin-keyvault = { path = "../origin-keyvault" }
origin-skills   = { path = "../origin-skills" }
origin-tools    = { path = "../origin-tools" }
origin-goal     = { path = "../origin-goal" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
which = "6"
rand = "0.8"
urlencoding = "2"
toml = "0.9"
async-trait = "0.1"
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.5"
origin-stream = { path = "../origin-stream" }
tempfile = "3"
ulid = "1"

[[bench]]
name = "keystroke_to_pixel"
harness = false

[package.metadata.binstall]
pkg-url    = "{ repo }/releases/download/v{ version }/origin-{ target }{ binary-ext }"
pkg-fmt    = "bin"
bin-dir    = "."

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "bin"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "bin"
