[package]
name = "origin-cli"
description = "Terminal UI and CLI for the origin agent runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "origin_cli"
path = "src/lib.rs"

[[bin]]
name = "origin"
path = "src/main.rs"

[dependencies]
origin-ipc = { path = "../origin-ipc" }
origin-daemon = { path = "../origin-daemon" }
origin-runtime = { path = "../origin-runtime" }
origin-tui = { path = "../origin-tui" }
origin-plan = { path = "../origin-plan" }
origin-trace = { path = "../origin-trace" }
origin-migrate = { path = "../origin-migrate" }
origin-store = { path = "../origin-store" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { workspace = true }
origin-oidc = { path = "../origin-oidc" }
unicode-segmentation = "1"
unicode-width = "0.2"
futures-util = "0.3"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
dirs = "5"
hostname = "0.4"
url = "2"
thiserror = "1"
origin-provider = { path = "../origin-provider" }
origin-keyvault = { path = "../origin-keyvault" }
origin-skills   = { path = "../origin-skills" }
origin-tools    = { path = "../origin-tools" }
origin-goal     = { path = "../origin-goal" }
origin-cost     = { path = "../origin-cost" }
origin-router   = { path = "../origin-router" }
origin-doctor   = { path = "../origin-doctor" }
origin-mermaid  = { path = "../origin-mermaid" }
origin-knowledge = { path = "../origin-knowledge" }
origin-mem      = { path = "../origin-mem" }
origin-cas      = { path = "../origin-cas" }
origin-schedule = { path = "../origin-schedule" }
origin-export   = { path = "../origin-export" }
origin-i18n     = { path = "../origin-i18n" }
origin-vcs      = { path = "../origin-vcs" }
origin-scout    = { path = "../origin-scout" }
origin-watch    = { path = "../origin-watch" }
origin-clipboard = { path = "../origin-clipboard" }
origin-voice    = { path = "../origin-voice" }
origin-websearch = { path = "../origin-websearch" }
origin-plugin   = { path = "../origin-plugin" }
origin-modeldiscovery = { path = "../origin-modeldiscovery" }
origin-outputstyle = { path = "../origin-outputstyle" }
origin-hooks    = { path = "../origin-hooks" }
origin-steering = { path = "../origin-steering" }
origin-lspfleet = { path = "../origin-lspfleet" }
origin-ambient  = { path = "../origin-ambient" }
origin-bench    = { path = "../origin-bench" }
origin-review   = { path = "../origin-review" }
origin-notify   = { path = "../origin-notify" }
origin-multimodal = { path = "../origin-multimodal" }
origin-gmail    = { path = "../origin-gmail" }
origin-workflowgen = { path = "../origin-workflowgen" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
which = "8"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"
toml = "0.8"
async-trait = "0.1"
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.5"
origin-stream = { path = "../origin-stream" }
tempfile = "3"
ulid = "1"

[[bench]]
name = "keystroke_to_pixel"
harness = false

[package.metadata.binstall]
pkg-url    = "{ repo }/releases/download/v{ version }/origin-{ target }{ binary-ext }"
pkg-fmt    = "bin"
bin-dir    = "."

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "bin"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "bin"
