[package]
name = "origin-codegraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
blake3 = "1"
fastcdc = "3"
origin-cas = { path = "../origin-cas" }
origin-store = { path = "../origin-store" }
rkyv = { version = "0.7", features = ["validation"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tree-sitter = "=0.22.6"
tree-sitter-rust = "=0.21.2"
tree-sitter-typescript = "=0.21.2"
tree-sitter-python = "=0.21.0"
tree-sitter-go = "=0.21.0"
tree-sitter-java = "=0.21.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "incremental"
harness = false
