[package]
name = "origin-codegraph"
description = "Native code knowledge graph with tree-sitter extraction and SQLite index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
blake3 = "1"
fastcdc = "3"
lopdf = "0.32"
origin-cas = { path = "../origin-cas" }
origin-store = { path = "../origin-store" }
petgraph = "0.6"
regex = "1"
rkyv = { version = "0.7", features = ["validation"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tree-sitter = "=0.22.6"
tree-sitter-rust = "=0.21.2"
tree-sitter-typescript = "=0.21.2"
tree-sitter-python = "=0.21.0"
tree-sitter-go = "=0.21.0"
tree-sitter-java = "=0.21.0"
# Curated grammar additions. All expose `pub fn language() -> tree_sitter::Language`
# (the 0.21.x generation), depend on tree-sitter >=0.21 (compatible with the
# pinned 0.22.6 core), and are edition 2021 (no edition2024 / MSRV 1.83-safe).
tree-sitter-c = "=0.21.4"
tree-sitter-cpp = "=0.22.3"
tree-sitter-c-sharp = "=0.21.3"
tree-sitter-ruby = "=0.21.0"
tree-sitter-bash = "=0.21.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
origin-cas = { path = "../origin-cas" }
tempfile = "3"

[[bench]]
name = "incremental"
harness = false

[[bench]]
name = "community"
harness = false
