[package]
name = "origin-codegraph"
description = "Native code knowledge graph with tree-sitter extraction and SQLite index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
blake3 = "1"
fastcdc = "4"
lopdf = "0.32"
origin-cas = { path = "../origin-cas" }
origin-store = { path = "../origin-store" }
petgraph = "0.6"
regex = "1"
rkyv = { version = "0.7", features = ["validation"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tree-sitter = "=0.22.6"
tree-sitter-rust = "=0.21.2"
tree-sitter-typescript = "=0.21.2"
tree-sitter-python = "=0.21.0"
tree-sitter-go = "=0.21.0"
tree-sitter-java = "=0.21.0"
# Curated grammar additions. All expose `pub fn language() -> tree_sitter::Language`
# (the 0.21.x generation), depend on tree-sitter >=0.21 (compatible with the
# pinned 0.22.6 core), and are edition 2021 (no edition2024 / MSRV 1.83-safe).
tree-sitter-c = "=0.21.4"
tree-sitter-cpp = "=0.22.3"
tree-sitter-c-sharp = "=0.21.3"
tree-sitter-ruby = "=0.21.0"
tree-sitter-bash = "=0.21.0"
# Extended grammars (codegraph parity with the repomap heuristic scanner).
# All pinned to the generation that links the tree-sitter 0.22.x core directly
# via `language()` and is MSRV-1.83 / edition2021 safe.
tree-sitter-php = "=0.23.0"
tree-sitter-swift = "=0.5.0"
tree-sitter-kotlin = "=0.3.8"
tree-sitter-scala = "=0.22.1"
tree-sitter-haskell = "=0.21.0"
tree-sitter-elixir = "=0.2.0"
# Lua 0.1.0 is the last release that exposes the classic `language()` ABI
# against the tree-sitter 0.21+/0.22 core; 0.2.0+ switched to the
# `tree-sitter-language` LanguageFn ABI which our pinned 0.22.6 core cannot
# convert from (no `From<LanguageFn>` until tree-sitter 0.23). Zig is omitted:
# every published `tree-sitter-zig` (1.0.0+) uses the LanguageFn ABI, so none
# is compatible with the 0.22.6 core.
tree-sitter-lua = "=0.1.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
origin-cas = { path = "../origin-cas" }
tempfile = "3"

[[bench]]
name = "incremental"
harness = false

[[bench]]
name = "community"
harness = false
