[package]
name = "origin-core"
description = "Core message types, IR, and provider capabilities for origin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
ulid = { version = "1", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
proptest = { version = "=1.4.0", default-features = false, features = ["std"] }
