# SPDX-License-Identifier: Apache-2.0
[package]
name = "origin-cost"
description = "Per-turn and cumulative USD cost + token accounting with prompt-cache economy awareness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
