[package]
name = "origin-cow"
description = "Copy-on-write workspace clones with a reflink fast path and eager-copy fallback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Override workspace `unsafe_code = "forbid"` — the per-platform reflink
# fast paths require raw FFI (Linux FICLONE ioctl, macOS clonefile,
# Windows FSCTL_DUPLICATE_EXTENTS_TO_FILE). Every `unsafe { ... }` block
# in this crate carries a `// SAFETY:` comment.
# Cargo forbids combining `[lints] workspace = true` with per-section
# overrides, so inline the workspace clippy lints.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "warn"
undocumented_unsafe_blocks = "deny"

[dependencies]
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["ioctl"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl"] }

[dev-dependencies]
tempfile = "3"
