[package]
name = "origin-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["openai", "gemini", "ollama"]
openai = ["dep:origin-provider-openai"]
gemini = ["dep:origin-provider-gemini"]
ollama = ["dep:origin-provider-ollama"]
openrouter = ["dep:origin-provider-openrouter"]

[dependencies]
origin-ipc              = { path = "../origin-ipc" }
origin-core             = { path = "../origin-core" }
origin-provider         = { path = "../origin-provider" }
origin-provider-anthropic = { path = "../origin-provider-anthropic" }
origin-provider-openai     = { path = "../origin-provider-openai",     optional = true }
origin-provider-gemini     = { path = "../origin-provider-gemini",     optional = true }
origin-provider-ollama     = { path = "../origin-provider-ollama",     optional = true }
origin-provider-openrouter = { path = "../origin-provider-openrouter", optional = true }
origin-tools            = { path = "../origin-tools" }
origin-permission       = { path = "../origin-permission" }
origin-store            = { path = "../origin-store" }
origin-cas              = { path = "../origin-cas" }
origin-stream           = { path = "../origin-stream" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "io-util", "sync"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
async-trait = "0.1"
thiserror   = "1"
rkyv        = { version = "0.7", features = ["validation", "bytecheck"] }
ulid        = "1"
rusqlite    = { version = "0.31", features = ["bundled"] }
hex         = "0.4"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
sysinfo  = "0.30"
proptest = { version = "=1.4.0", default-features = false, features = ["std"] }

[lib]
name = "origin_daemon"
path = "src/lib.rs"

[[bin]]
name = "origin-daemon"
path = "src/main.rs"

[[bench]]
name = "phase2_ram_soak"
harness = false
