[package]
name = "origin-daemon"
description = "Daemon hosting origin session, agent, and protocol services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["openai", "gemini", "ollama", "openrouter", "openai-compat", "oauth-providers", "custom-providers"]
openai = ["dep:origin-provider-openai", "openai-compat"]
openai-compat = []
gemini = ["dep:origin-provider-gemini"]
ollama = ["dep:origin-provider-ollama"]
openrouter = ["dep:origin-provider-openrouter", "openai-compat"]
bedrock = ["dep:origin-provider-bedrock"]
github-models = ["dep:origin-provider-github"]
oauth-providers = []
custom-providers = []
# Opt-in OpenTelemetry OTLP metrics export. Off by default so the standard
# daemon build does not pull tonic/prost; build with `--features otel` and set
# ORIGIN_OTLP_ENDPOINT to stream metrics to a collector.
otel = ["origin-metrics/otel"]

[dependencies]
origin-ipc              = { path = "../origin-ipc" }
origin-core             = { path = "../origin-core" }
origin-provider         = { path = "../origin-provider" }
origin-provider-anthropic = { path = "../origin-provider-anthropic" }
origin-provider-openai-compat = { path = "../origin-provider-openai-compat" }
origin-provider-openai     = { path = "../origin-provider-openai",     optional = true }
origin-provider-gemini     = { path = "../origin-provider-gemini",     optional = true }
origin-provider-ollama     = { path = "../origin-provider-ollama",     optional = true }
origin-provider-openrouter = { path = "../origin-provider-openrouter", optional = true }
origin-provider-bedrock    = { path = "../origin-provider-bedrock",    optional = true }
origin-provider-github     = { path = "../origin-provider-github",     optional = true }
origin-tools            = { path = "../origin-tools" }
origin-permission       = { path = "../origin-permission" }
origin-skills           = { path = "../origin-skills" }
origin-store            = { path = "../origin-store" }
origin-cas              = { path = "../origin-cas" }
origin-cmdparse         = { path = "../origin-cmdparse" }
origin-codegraph        = { path = "../origin-codegraph" }
origin-stream           = { path = "../origin-stream" }
origin-keyvault         = { path = "../origin-keyvault" }
origin-sidecar          = { path = "../origin-sidecar" }
origin-mem              = { path = "../origin-mem" }
origin-trace            = { path = "../origin-trace" }
origin-metrics          = { path = "../origin-metrics" }
origin-runtime          = { path = "../origin-runtime" }
origin-alloc            = { path = "../origin-alloc" }
origin-resume-token     = { path = "../origin-resume-token" }
origin-goal             = { path = "../origin-goal" }
origin-cost             = { path = "../origin-cost" }
origin-export           = { path = "../origin-export" }
origin-plan             = { path = "../origin-plan" }
origin-planner          = { path = "../origin-planner" }
origin-swarm            = { path = "../origin-swarm" }
origin-browser          = { path = "../origin-browser" }
origin-lsp-client       = { path = "../origin-lsp-client" }
# Wave-1/2 subsystem crates wired into the daemon (all default-off / available).
origin-vcs              = { path = "../origin-vcs" }
origin-postedit         = { path = "../origin-postedit" }
origin-policy           = { path = "../origin-policy" }
origin-conseca          = { path = "../origin-conseca" }
origin-telemetry        = { path = "../origin-telemetry" }
origin-notify           = { path = "../origin-notify" }
origin-oidc             = { path = "../origin-oidc" }
origin-router           = { path = "../origin-router" }
origin-repomap          = { path = "../origin-repomap" }
origin-multimodal       = { path = "../origin-multimodal" }
origin-lspfleet         = { path = "../origin-lspfleet" }
origin-review           = { path = "../origin-review" }
origin-schedule         = { path = "../origin-schedule" }
origin-ambient          = { path = "../origin-ambient" }
origin-editfmt          = { path = "../origin-editfmt" }
origin-hooks            = { path = "../origin-hooks" }
origin-migrate          = { path = "../origin-migrate" }
ctrlc                   = "3"
dirs                    = "5"
which                   = "8"
reqwest                 = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
hyper                   = { workspace = true }
hyper-util              = { version = "0.1", features = ["tokio"] }
http-body-util          = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "io-util", "sync"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
async-trait = "0.1"
thiserror   = "1"
rkyv        = { version = "0.7", features = ["validation", "bytecheck"] }
ulid        = "1"
rusqlite    = { version = "0.31", features = ["bundled"] }
hex         = "0.4"
parking_lot = "0.12"
rand        = "0.8"
toml        = "0.8"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
sysinfo  = "0.30"
proptest = { version = "=1.4.0", default-features = false, features = ["std"] }
wiremock = "0.6"

[lib]
name = "origin_daemon"
path = "src/lib.rs"

[[bin]]
name = "origin-daemon"
path = "src/main.rs"

[[bench]]
name = "phase2_ram_soak"
harness = false

[[bench]]
name = "long_session"
harness = false
