# SPDX-License-Identifier: Apache-2.0
[package]
name = "origin-doctor"
description = "Environment/runtime diagnostics with injected probes plus a privacy phone-home disclosure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
