# SPDX-License-Identifier: Apache-2.0
[package]
name = "origin-editfmt"
description = "Model-tuned edit-format matrix: parsers and appliers for diff formats."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"

[lints]
workspace = true
