# SPDX-License-Identifier: Apache-2.0
[package]
name = "origin-export"
description = "Conversation transcript export to clean Markdown or pretty JSON"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
